--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.transitions {
+  @apply transition duration-300 ease-in
+}
